--- a/_data/certifications.yml
+++ b/_data/certifications.yml
@@ -1,15 +1,15 @@
-- name: "OffSec Certified Professional"
-  issuer: "OffSec"
-  year: "2025"
+- name: "Certified CyberDefender (CCD)"
+  issuer: "CyberDefenders"
+  year: "2024"
   status: "Active"
-  badge: "https://api.accredible.com/v1/frontend/credential_website_embed_image/badge/143663492"
-  url: "https://credentials.offsec.com/e64d358f-1ed1-48fa-996e-774fbd42ae25"
+  badge: "https://images.credly.com/size/110x110/images/892ffd98-b098-46f4-8315-89f78d03f950/image.png"
+  url: "https://www.credly.com/badges/a228f4ea-3883-4707-ab58-934514b9fbe4/public_url"
 
-- name: "HackTheBox Certified Defensive Security Analyst"
-  issuer: "HackTheBox"
+- name: "Certified Threat Hunting Professional (eCTHP)"
+  issuer: "INE"
   year: "2025"
   status: "Active"
-  badge: "https://images.credly.com/size/680x680/images/e78adea1-f60b-4991-b5d5-3427140c7c1d/image.png"
-  url: "https://www.credly.com/badges/eabef68d-bbe6-4563-b6c5-21c6cebd8097"
+  badge: "https://templates.images.credential.net/16917717378236750728712191243482.png"
+  url: "https://certs.ine.com/cbc50094-16e1-4e7b-89fb-fdb5108327d8#acc.Y5e4Ijiv"
 
 # Добавь сюда остальные сертификаты по аналогии
